--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -124,6 +124,19 @@ jobs:
             pip install tox
             tox -e lint
 
+  pypi:
+    docker:
+      - image: python:3.6.5
+    steps:
+      - checkout
+      - run:
+          command: |
+            pip install wheel twine
+            ./bin/build
+            ./bin/release-pypi
+      - store_artifacts:
+          path: dist
+
 workflows:
   version: 2
   test:
@@ -141,3 +154,11 @@ workflows:
             - python-3.6-test
             - python-3.7-test
       - lint
+      - pypi:
+          requires:
+            - lint
+            - coverage
+          filters:
+            branches:
+              only:
+                - /^master$/
