--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 envlist =
     py27,py34,py35,py36,py37
-    lint,coverage
+    sync-deps3,sync-deps2,lint,coverage
 
 [testenv]
 basepython =
@@ -20,6 +20,24 @@ commands =
 setenv =
     COVERAGE_FILE=tmp/.coverage.{envname}
     LANG=en_US.UTF-8
+    SLUGIFY_USES_TEXT_UNIDECODE=yes
+
+[testenv:sync-deps3]
+basepython = python3.7
+commands =
+    pip install airflow-docker-helper[dev]
+    pip-compile -o deps/dev-requirements.txt deps/dev-requirements.in
+    pip-compile -o deps/testing-requirements.txt deps/testing-requirements.in deps/dev-requirements.txt
+setenv =
+    SLUGIFY_USES_TEXT_UNIDECODE=yes
+
+[testenv:sync-deps2]
+basepython = python2.7
+commands =
+    pip install airflow-docker-helper[dev]
+    python2 -m piptools compile -o deps/testing-requirements.txt deps/testing-requirements.in
+
+setenv =
     SLUGIFY_USES_TEXT_UNIDECODE=yes
 
 [testenv:coverage]
